--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.11",
     "@expo/vector-icons": "^12.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
@@ -17,8 +18,10 @@
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "expo-vector-icons": "^10.0.1",
+    "graphql": "^15.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^7.15.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-appearance": "~0.3.3",
     "react-native-gesture-handler": "~1.10.2",
