--- a/backend/instaclone-backend/package.json
+++ b/backend/instaclone-backend/package.json
@@ -10,17 +10,9 @@
     "build": "babel src --out-dir build",
     "start": "node build/server"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nomadcoders/instaclone-backend.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nomadcoders/instaclone-backend/issues"
-  },
-  "homepage": "https://github.com/nomadcoders/instaclone-backend#readme",
   "dependencies": {
     "@babel/cli": "^7.13.10",
     "@prisma/client": "^2.16.1",
@@ -30,11 +22,11 @@
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-capacitor": "^6.2.0",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "fs-capacitor": "^6.2.0"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
