--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.11",
     "@expo/vector-icons": "^12.0.5",
+    "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
@@ -19,6 +20,7 @@
     "expo-status-bar": "~1.0.4",
     "expo-vector-icons": "^10.0.1",
     "graphql": "^15.5.3",
+    "graphql-tag": "^2.12.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.15.3",
